# AST245-Gravity

./: CMakeLists.txt  DirectNBodyGravityCalculator.cpp  DirectNBodyGravityCalculator.h  GravityCalculator.cpp  GravityCalculator.h  OctaTree.cpp  OctaTree.h  SimpleTransform.vertexshader  SingleColor.fragmentshader  Structure.cpp  Structure.h  graphics.cpp  graphics.h  main.cpp
